# memory-agent-j5i7ma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: .gitignore  README.md  terraform.tfvars.example
infrastructure/aws/: backend.tf  cloudwatch.tf  data.tf  ecr.tf  ecs.tf  iam.tf  kms.tf  locals.tf  outputs.tf  providers.tf  route53.tf  s3.tf  variables.tf  versions.tf  vpc.tf
infrastructure/temporal/: backend.tf  data.tf  locals.tf  namespace.tf  outputs.tf  providers.tf  search-index.tf  variables.tf  versions.tf
src/backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/backend/src/: __init__.py  main.py
src/backend/src/activities/: __init__.py  cache_activities.py  document_activities.py  index_activities.py  llm_activities.py  storage_activities.py
src/backend/src/api/: __init__.py  dependencies.py  router.py  server.py
src/backend/src/api/endpoints/: __init__.py  documents.py  health.py
src/backend/src/api/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limiter.py
src/backend/src/api/models/: __init__.py  document.py  request.py  response.py
src/backend/src/cli/: __init__.py  main.py
src/backend/src/cli/commands/: __init__.py  document.py  health.py
src/backend/src/config/: __init__.py  logging.py  settings.py
src/backend/src/core/: __init__.py  auth.py  cache.py  chunking.py  encryption.py  errors.py  security.py  telemetry.py  utils.py
src/backend/src/db/: __init__.py  base.py  session.py
src/backend/src/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/src/db/models/: __init__.py  document.py  document_chunk.py  document_index.py
src/backend/src/integrations/: __init__.py
src/backend/src/integrations/aws/: __init__.py  kms.py  s3.py
src/backend/src/integrations/llm/: __init__.py  openai.py
src/backend/src/integrations/temporal/: __init__.py  client.py  worker.py
src/backend/src/protos/: __init__.py  document.proto  service.proto
src/backend/src/repositories/: __init__.py  base.py  cache.py  document.py  index.py
src/backend/src/services/: __init__.py  cache.py  document.py  embedding.py  graph.py  index.py  llm.py  storage.py
src/backend/src/workflows/: __init__.py  document.py  search.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_api.py  test_workflows.py
src/backend/tests/unit/: __init__.py  test_activities.py  test_models.py  test_repositories.py  test_services.py
